--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 A fully-functional TCP reliable transport protocol implementation using 
 Fishnet to simulate network lossage.
 
+Supports go-back-n TCP algorithm.
+
 Email tyler.petrochko@yale.edu for questions.
 
